# cortex-code-skills

./: .gitignore  DISCLAIMER.md  LICENSE  NOTICE.md  README.md
skills/aws-mcp/: SKILL.md
skills/cf-explain-pipeline-skill/: SKILL.md
skills/creacion-google-slides/: README.md  SKILL.md
skills/creacion-google-slides/cowork/: DEPLOY.md  build_deck_proc.py  setup.sql
skills/creacion-google-slides/references/: content-guide.md
skills/creacion-google-slides/scripts/: build_payload.py  classify_template.py  extract_catalog.gs  font_fit.py
skills/demo-recording/: README.md  SKILL.md  pyproject.toml
skills/demo-recording/references/: talk-track-format.md  troubleshooting.md  voice-cloning.md  voice-setup.md
skills/demo-recording/scripts/: clone_voice.py  clone_voice_spcs.py  generate_audio.py  setup_spcs.py
skills/demo-recording/scripts/spcs/: Dockerfile  job_clone_voice.py
skills/guardian/: SKILL.md
skills/guardian/references/: report-template.md  toolchain.md
skills/html-to-pdf/: SKILL.md
skills/html-to-pdf/references/: chrome-flags.md
skills/html-to-pptx/: SKILL.md
skills/html-to-pptx/references/: html-section-map.md  slide-types.md
skills/kaniko-spcs/: SKILL.md
skills/kaniko-spcs/references/: kaniko-entrypoint.sh.md
skills/ontology-stack-builder/: SKILL.md
skills/openflow-oracle-s3-snowflake/: SKILL.md
skills/openflow-oracle-s3-snowflake/references/: snowflake-setup.md  sql-examples.md  validation-checklist.md
skills/reference-architecture-diagram/: SKILL.md
skills/snowflake-dashboard-viz/: SKILL.md
(+28 files in other folders)
